# Learning_C

./: README.md
1 a 100/: main.c
AVALIAÇÃO_ED1_Q3A_Nagibe/: AVALIAÇÃO_ED1_Q3A_Nagibe.cbp  AVALIAÇÃO_ED1_Q3A_Nagibe.depend  AVALIAÇÃO_ED1_Q3A_Nagibe.layout  main.c
Atividade/: Atividade.cbp  Atividade.depend  Atividade.layout  main.c
C em media/: C em media.cbp
C++ Teste/: C++ Teste.cbp  C++ Teste.depend  main.cpp
ED2_aulas/intercalacao/intercalacao/: CMakeLists.txt  Makefile  intercalacao.c  test_intercalacao.c
Letra a/: Letra A.cpp  Letra a.cbp  Letra a.depend  Letra a.layout
Letra b/: Letra b.cbp  Letra b.layout  main.cpp
Ordenar/: Ordenar.cbp
Primeiro projeto em c/: Primeiro projeto em c.cbp  Primeiro projeto em c.depend  Primeiro projeto em c.layout  main.c
Primeiro projeto em gp/: Primeiro projeto em gp.cbp
Transformar temperatura/: Transformar temperatura.cbp  main.c
Valor do funcionario/: Valor do funcionario.cbp  Valor do funcionario.depend  main.c
__MACOSX/: ._exemplosConio2
apresentaçao do trabalho/: apresentaçao do trabalho.cbp  apresentaçao do trabalho.layout  main.c
area da circuferencia/: area da circuferencia.cbp  main.c
arvore/: arvore.cbp  arvore.layout  main.c
auxilio/: auxilio.cbp  auxilio.depend  main.c
brinquedos/: brinquedos.cbp  brinquedos.layout  main.c
calculo 1/: calculo 1.cbp  calculo 1.depend  main.c
clasificaçao do triangulo/: clasificaçao do triangulo.cbp  clasificaçao do triangulo.depend  clasificaçao do triangulo.layout  main.c
consumo de carro/: consumo de carro.cbp  main.c
conta de agua/: main.c  (+1 more)
(+244 files in other folders)
